2002-09-07  Adam Fedor  <fedor@gnu.org>

	* Source/NSBrowser.m: Convert comments for gsdoc.
	(-selectRow:inColumn:): Call delegate -browser:selectRow:inColumn:.
	(-setPath:): Call delegate -browser:selectCellWithString:inColumn:.
	(-doClick:): Do not call the above methods.
	(-initWithCoder:): Set _isLoaded to NO.

2002-09-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m
	Release the invocation in [detachDrawingThread:toTarget:withObject:] 
	not in the helper method. (Patch by David Ayers <d.ayers@inode.at>).
	* Headers/gnustep/gui/NSPasteboard.h
	* Source/externs.m
	Define NSHTMLPboardType.
	* Headers/gnustep/gui/GSTextConverter.h
	Define protocol for method [classForFormat:producer:].
	* Headers/gnustep/gui/NSTextAttachment.h
	Moved NSAttributedString text attachment method declarations to here.
	* Headers/gnustep/gui/NSAttributedString.h
	Define new MacOSX methods.
	* Source/NSAttributedString.m
	Implemented [textFileTypes], [textPasteboardTypes],
	[textUnfilteredFileTypes], [textUnfilteredPasteboardTypes].
	* Source/NSMenu.m
	* Source/NSTextView.m
	Corrected includes.
	
2002-09-06  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSPrintInfo.h: Add print option.
	* Source/NSPrintOperation.m ([-_printPaginateWithInfo:knowsRange:): 
	Use it.
	(-_rectForPage:info:xpage:ypage:): Correct xpage/ypage calc.
	(-_adjustPagesFirst:last:info:): Likewise.
	* Source/NSStringDrawing.m (setupSpecialRun): Set base.

	* Source/NSSound.m (-getDataFromFileAtPath:): Use
	fileSystemRepresentation.
	* Source/NSView.m (-beginPage:label:bBox:fonts:): Use
	lossyCString.

2002-09-06  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSColorPanel.h
	* Source/NSColorPanel.m
	Moved the method [NSApplication orderFrontColorPanel:] to here.
	* Headers/gnustep/gui/NSHelpPanel.h
	* Source/NSHelpPanel.m
	Moved the method [NSApplication orderFrontHelpPanel:] to here.	
	* Headers/gnustep/gui/NSDataLinkPanel.h
	* Source/NSDataLinkPanel.m